[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/items/Item.gd" type="Script" id=1]

[node name="Item" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="PickUpSFX" type="AudioStreamPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
